--- a/src/app/menu-top/menu-top.component.html
+++ b/src/app/menu-top/menu-top.component.html
@@ -14,231 +14,41 @@
           <!-- Shop by category -->
           <div class="mega-menu-category" [style.display]="isShowMenu ? 'block' : 'none'" id="mega-menu-category" *ngFor="let item of allMenu">
             <ul class="nav">
-              <li><a (click)="handleMenu($event,item)" [routerLink]="['/danh-muc-san-pham-g']">{{item.categoryName}}</a>
-                  <div class="wrap-popup">
-                    <div class="popup">
-                      <div class="row">
-                        <div class="col-md-4 col-sm-6">
-                          <ul class="nav">
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Grid View Category Page</span></a></li>
-                            <li><a href="shop_grid_full_width.html"><span>Grid View Full Width</span></a></li>
-                            <li><a href="shop_list.html"><span>List View Category Page</span></a></li>
-                            <li><a [routerLink]="['/chi-tiet']"><span>Full Width Product Page</span> </a></li>
-                            <li><a href="single_product_sidebar.html"><span>Product Page With Sidebar</span> </a></li>
-                            <li><a href="single_product_magnify_zoom.html"><span>Product Page Magnify Zoom</span> </a></li>
-                            <li><a href="shopping_cart.html"><span>Shopping Cart</span></a></li>
-                            <li><a href="wishlist.html"><span>Wishlist</span></a></li>
-                            <li><a href="compare.html"><span>Compare Products</span></a></li>
-                            <li><a href="checkout.html"><span>Checkout</span></a></li>
-                            <li><a href="sitemap.html"><span>Sitemap</span></a></li>
-                          </ul>
-                        </div>
-                        <div class="col-md-4 col-sm-6 has-sep">
-                          <ul class="nav">
-                            <li><a href="about_us.html"><span>About Us</span></a></li>
-                            <li><a href="contact_us.html"><span>Contact Us</span></a></li>
-                            <li><a href="orders_list.html"><span>Orders List</span></a></li>
-                            <li><a href="order_details.html"><span>Order Details</span></a></li>
-                            <li><a href="404error.html"><span>404 Error</span> </a></li>
-                            <li><a href="faq.html"><span>FAQ Page</span></a></li>
-                            <li><a href="manufacturers.html"><span>Manufacturers</span></a></li>
-                            <li><a href="quick_view.html"><span>Quick View</span></a></li>
-                            <li><a href="dashboard.html"><span>Account Dashboard</span></a></li>
-                            <li><a href="shortcodes.html"><span>Shortcodes</span> </a></li>
-                            <li><a href="typography.html"><span>Typography</span></a></li>
-                          </ul>
-                        </div>
-                        <div class="col-md-4 has-sep hidden-sm">
-                          <div class="custom-menu-right">
-                            <div class="box-banner menu-banner">
-                              <div class="add-right"><a href="#"><img src="./../assets/images/menu-banner-img1.jpg" alt="responsive"></a></div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+              <li (mouseleave)="item.active = false" [ngClass]="{'active': item.active}" (mouseenter)="item.active = true"><a (click)="handleMenu($event,item)" [routerLink]="['/danh-muc-san-pham-g']">{{item.categoryName}}</a>
+                <div class="wrap-popup">
+                <div [@fadeInOut]="item.active ? 'in' : 'out'" [ngStyle]="{'display': item.active && item.submenu ? 'block' : 'none'}" class="popup">
+                  <div class="row" *ngFor="let item of item.submenu" >
+                  <div class="col-md-4 col-sm-6">
+                    <ul class="nav">
+                    <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>{{item.categoryName}}</span></a></li>
+                    </ul>
                   </div>
+                  <!-- <div class="col-md-4 col-sm-6 has-sep">
+                    <ul class="nav">
+                    <li><a href="about_us.html"><span>About Us</span></a></li>
+                    <li><a href="contact_us.html"><span>Contact Us</span></a></li>
+                    <li><a href="orders_list.html"><span>Orders List</span></a></li>
+                    <li><a href="order_details.html"><span>Order Details</span></a></li>
+                    <li><a href="404error.html"><span>404 Error</span> </a></li>
+                    <li><a href="faq.html"><span>FAQ Page</span></a></li>
+                    <li><a href="manufacturers.html"><span>Manufacturers</span></a></li>
+                    <li><a href="quick_view.html"><span>Quick View</span></a></li>
+                    <li><a href="dashboard.html"><span>Account Dashboard</span></a></li>
+                    <li><a href="shortcodes.html"><span>Shortcodes</span> </a></li>
+                    <li><a href="typography.html"><span>Typography</span></a></li>
+                    </ul>
+                  </div>
+                  <div class="col-md-4 has-sep hidden-sm">
+                    <div class="custom-menu-right">
+                    <div class="box-banner menu-banner">
+                      <div class="add-right"><a href="#"><img src="./../assets/images/menu-banner-img1.jpg" alt="responsive"></a></div>
+                    </div>
+                    </div>
+                  </div> -->
+                  </div>
+                </div>
+                </div>
               </li>
-                <!--
-                <li><a href="#">TV &amp; Audio</a>
-                  <div class="wrap-popup">
-                    <div class="popup">
-                      <div class="row">
-                        <div class="col-md-4 col-sm-6">
-                          <h3>Televisions</h3>
-                          <ul class="nav">
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">LCD Televisions</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Projection Televisions</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Play Stations</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Televisions/Tube</a></li>
-                          </ul>
-                          <br>
-                          <h3>Headphones</h3>
-                          <ul class="nav">
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Players &amp; Video</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Party Dresses</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Midi Dresses</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Strapless Dresses</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Day Dresses</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-md-4 col-sm-6 has-sep">
-                          <h3>Appliances</h3>
-                          <ul class="nav">
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Kitchen</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Refrigerators</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Laundry &amp; Garment</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Vacuum Cleaners</a></li>
-                          </ul>
-                          <br>
-                          <h3>Video Accessories</h3>
-                          <ul class="nav">
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Bags &amp; Cases</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Video Tapes</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Memory Card</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Readers Tripods</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Batteries</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-md-4 has-sep hidden-sm">
-                          <div class="custom-menu-right">
-                            <div class="box-banner media">
-                              <div class="add-desc">
-                                <h3>Computer <br>
-                                  Services </h3>
-                                <div class="price-sale">2016</div>
-                                <a href="#">Shop Now</a> </div>
-                              <div class="add-right"><a href="#"><img src="./../assets/images/menu-banner-img2.jpg" alt="fashion"></a></div>
-                            </div>
-                            <div class="box-banner media">
-                              <div class="add-desc">
-                                <h3>Save up to</h3>
-                                <div class="price-sale">75 <sup>%</sup><sub>off</sub></div>
-                                <a href="#">Shopping Now</a> </div>
-                              <div class="add-right"><a href="#"><img src="./../assets/images/menu-banner-img3.jpg" alt=" html store"></a></div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li><a href="#">Apple Store </a>
-                  <div class="wrap-popup">
-                    <div class="popup">
-                      <div class="row">
-                        <div class="col-md-4 col-sm-6">
-                          <h3>Online store</h3>
-                          <ul class="nav">
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Mac personal computers</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">iPhone smartphones</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">iPad tablet computers</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">iPod portable</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Media players</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Smartwatches</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">Apple TV digital</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']">software</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-md-4 col-sm-6 has-sep">
-                          <h3>Accessories</h3>
-                          <ul class="nav">
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>JCables Chargers</span></a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Cases Backup</span></a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Battery Packs Screen</span> </a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Protectors</span> </a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Holders &amp; Stands</span></a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Office Wireless</span></a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Cable Phones</span></a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Fax Radio Phones</span></a></li>
-                          </ul>
-                        </div>
-                        <div class="col-md-4 has-sep hidden-sm">
-                          <div class="custom-menu-right">
-                            <div class="box-banner menu-banner">
-                              <div class="add-right"><a href="#"><img src="./../assets/images/menu-banner-img4.jpg" alt="responsive"></a></div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li><a [routerLink]="['/danh-muc-san-pham-g']">Photo &amp; Camera</a>
-                  <div class="wrap-popup column3">
-                    <div class="popup">
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <h3>Camera Store</h3>
-                          <ul class="nav">
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> Canon PowerShot </a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> Photography </a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> Action Camcorders </a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> Film Cameras </a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> Photo Studio </a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> Camera Lenses </a></li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-6 has-sep">
-                          <h3>Accessories</h3>
-                          <ul class="nav">
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> Bags &amp; Cases </a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> Keyboards</a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> Web Cameras </a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> Batteries &amp; Chargers </a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> USB Gadgets </a></li>
-                            <li><a [routerLink]="['/danh-muc-san-pham-g']"> Cables &amp; Connectors </a></li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-12"> <a class="ads1" href="#"><img class="img-responsive" src="./../assets/images/menu-banner-img5.jpg" alt="bootstrap"></a> </div>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li><a [routerLink]="['/danh-muc-san-pham-g']">Smartphone</a>
-                  <div class="wrap-popup column1">
-                    <div class="popup">
-                      <ul class="nav">
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Micromax Canvas</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Moto G5</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>iPhone 6-32GB</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>OnePlus 5</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Samsung On7 pro</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Coolpad Cool</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Xolo Era</span></a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-                <li><a [routerLink]="['/danh-muc-san-pham-g']">Laptop</a>
-                  <div class="wrap-popup column1">
-                    <div class="popup">
-                      <ul class="nav">
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Lenovo Ideapad</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Dell Inspiron</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Acer One 14</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>Toshiba</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>ASUS VivoBook</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>HP Pavilion</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']"><span>iBall CompBook</span></a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-                <li class="nosub"><a href="#">Games &amp; Video</a></li>
-                <li><a href="blog.html">Blog</a>
-                  <div class="wrap-popup column1">
-                    <div class="popup">
-                      <ul class="nav">
-                        <li><a href="blog_right_sidebar.html"> Blog – Right Sidebar </a></li>
-                        <li><a href="blog_left_sidebar.html"> Blog – Left Sidebar </a></li>
-                        <li><a href="blog_full_width.html"> Blog – Full-Width </a></li>
-                        <li><a href="blog_single_post.html"> Single post </a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-                <li class="nosub"><a [routerLink]="['/danh-muc-san-pham-g']">Accessories</a></li> -->
             </ul>
           </div>
         </div>
