--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -19,19 +19,18 @@
   
   <div class="main container">
  
-     <div class="about-page">
-        <div class="col-xs-12 col-sm-6"> 
+     <div class="about-page home__tnc__intro">
+        <div class="col-xs-12 col-sm-6 dm_intro_text"> 
           
-          <h1>Welcome to <span class="text_color">ShopMart</span></h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lacus metus, convallis ut leo nec, tincidunt eleifend justo. Ut felis orci, hendrerit a pulvinar et, gravida ac lorem. Sed vitae molestie sapien, at sollicitudin tortor.<br>
-            <br>
-            Duis id volutpat libero, id vestibulum purus.Donec euismod accumsan felis, <a href="#">egestas lobortis velit tempor</a> vitae. Integer eget velit fermentum, dignissim odio non, bibendum velit.</p>
-          <ul>
+          <!-- <h1>Chào mừng bạn đến <span class="text_color">DM Computer</span></h1> -->
+          <div class="intro_text_title">DM Computer - Địa chỉ sắm PC/Laptop uy tín hàng đầu Việt Nam!</div>
+          DM Computer tự hào với tôn chỉ luôn lấy khách hàng làm trọng tâm bằng việc cung cấp các dịch vụ hậu mãi chu đáo, tận tâm để mang đến cho khách hàng những sản phẩm có chất lượng và trải nghiệm với PC/Laptop tốt nhất! Chúng tôi đảm bảo bạn sẽ có được những trải nghiệm tuyệt vời nhất khi, sử dụng các dịch vụ và sản phẩm của DM Computer.
+          <!-- <ul>
             <li><i class="fa fa-arrow-right"></i>&nbsp; <a href="#">Suspendisse potenti. Morbi mollis tellus ac sapien.</a></li>
             <li><i class="fa fa-arrow-right"></i>&nbsp; <a href="#">Cras id dui. Nam ipsum risus, rutrum vitae, vestibulum eu.</a></li>
             <li><i class="fa fa-arrow-right"></i>&nbsp; <a href="#">Phasellus accumsan cursus velit. Pellentesque egestas.</a></li>
             <li><i class="fa fa-arrow-right"></i>&nbsp; <a href="#">Lorem Ipsum generators on the Internet tend to repeat predefined.</a></li>
-          </ul>
+          </ul> -->
         </div>
         <div class="col-xs-12 col-sm-6">
           <div class="single-img-add sidebar-add-slider">
@@ -39,9 +38,9 @@
               
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
-                <div class="item active"> <img src="./../assets/images/about_us_slide1.jpg" alt="slide1"> </div>
-                <div class="item"> <img src="./../assets/images/about_us_slide2.jpg" alt="slide2"> </div>
-                <div class="item"> <img src="./../assets/images/about_us_slide3.jpg" alt="slide3"> </div>
+                <div class="item active"> <img src="../../assets/images/banghieiu.jpg" alt="slide1"> </div>
+                <!-- <div class="item"> <img src="./../assets/images/about_us_slide2.jpg" alt="slide2"> </div>
+                <div class="item"> <img src="./../assets/images/about_us_slide3.jpg" alt="slide3"> </div> -->
               </div>
             </div>
           </div>
