--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -139,7 +139,7 @@
           <div class="col-sm-6 col-xs-12 coppyright"> Copyright © 2023 <a href="#"> ĐMC Store </a>. All Rights Reserved. </div>
           <div class="col-sm-6 col-xs-12">
             <ul class="footer-company-links">
-              <li> <a href="about_us.html">About ĐMC</a> </li>
+              <li> <a [routerLink]="['/gioi-thieu']">About ĐMC</a> </li>
               <li> <a href="#">Careers</a> </li>
               <li> <a href="#">Privacy Policy</a> </li>
             </ul>
