--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,7 +39,7 @@
                 <li class="hidden-xs"><a title="Bảo hành" href="#"><span>Bảo hành: <a href="tel:+84908708294">0908.708.294</a></span></a></li>
                 <li><a title="Store Locator" href="#"><span>Vị trí cửa hàng</span></a></li>
                 <li><a title="Thanh toán" [routerLink]="['/thanh-toan']"><span>Thanh toán</span></a></li>
-                <li>
+                <!-- <li>
                   <div class="dropdown"><a class="current-open" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#"><span>Người dùng </span> <i class="fa fa-angle-down"></i></a>
                     <ul class="dropdown-menu" role="menu">
                       <li><a [routerLink]="['/nguoi-dung']">Tài khoản</a></li>
@@ -52,7 +52,7 @@
                     </ul>
                   </div>
                 </li>
-                <li><a title="login" [routerLink]="['/nguoi-dung']"><span>Đăng nhập</span></a></li>
+                <li><a title="login" [routerLink]="['/nguoi-dung']"><span>Đăng nhập</span></a></li> -->
               </ul>
             </div>
           </div>
@@ -111,20 +111,10 @@
                       <div class="block-subtitle hidden">Recently added items</div>
                       <ul id="cart-sidebar" class="mini-products-list" *ngFor="let item of getItemCart()">
                         <li class="item odd"> <a [routerLink]="['/gio-hang']" title="{{item.productName}}" class="product-image"><img [src]="urlImg + item.image" alt="html Template" width="65"></a>
-                          <div class="product-details"> <a href="#" title="Remove This Item" class="remove-cart"><i class="pe-7s-trash"></i></a>
+                          <div class="product-details"> <a (click)="removeItemCart(item.id)" title="Remove This Item" class="remove-cart"><i class="pe-7s-trash"></i></a>
                             <p class="product-name"><a [routerLink]="['/gio-hang']">{{item.productName}}</a> </p>
                             <strong>{{item.quantity}}</strong> x <span class="price">{{item.price | currency:"VND"}}</span> </div>
                         </li>
-                        <!-- <li class="item even"> <a [routerLink]="['/gio-hang']" title="Product title here" class="product-image"><img src="./../assets/images/products/product-1.jpg" alt="html Template" width="65"></a>
-                          <div class="product-details"> <a href="#" title="Remove This Item" class="remove-cart"><i class="pe-7s-trash"></i></a>
-                            <p class="product-name"><a [routerLink]="['/gio-hang']">Consectetur utes anet adipisicing elit</a> </p>
-                            <strong>1</strong> x <span class="price">$230.00</span> </div>
-                        </li>
-                        <li class="item last odd"> <a [routerLink]="['/gio-hang']" title="Product title here" class="product-image"><img src="./../assets/images/products/product-1.jpg" alt="html Template" width="65"></a>
-                          <div class="product-details"> <a href="#" title="Remove This Item" class="remove-cart"><i class="pe-7s-trash"></i></a>
-                            <p class="product-name"><a [routerLink]="['/gio-hang']">Sed do eiusmod tempor incidist</a> </p>
-                            <strong>2</strong> x <span class="price">$420.00</span> </div>
-                        </li> -->
                       </ul>
                       <div class="top-subtotal">Tổng tiền: <span class="price">{{sumPriceItemsInCart() | currency : "VND"}}</span></div>
                       <div class="actions">
