--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -71,7 +71,7 @@
               </div>
               <div class="product-cart-option">
                 <ul>
-                  <li><a href="#"><i class="fa fa-heart-o"></i><span>Thêm vào yêu thích</span></a></li>
+                  <li><a (click)="addToFavorite(product)"><i class="fa fa-heart-o"></i><span>Thêm vào yêu thích</span></a></li>
                   <!-- <li><a href="#"><i class="fa fa-link"></i><span>Đối chiếu</span></a></li>
                   <li><a href="#"><i class="fa fa-envelope"></i><span>Email to a Friend</span></a></li> -->
                 </ul>
