--- a/src/app/product-grid/product-grid.component.html
+++ b/src/app/product-grid/product-grid.component.html
@@ -105,7 +105,7 @@
                           </a> </div>
                         <div class="pr-info-area">
                           <div class="pr-button">
-                            <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']" routerLinkActive="router-link-active" > <i class="fa fa-heart"></i> </a> </div>
+                            <div class="mt-button add_to_wishlist"> <a (click)="addToFavorite(item)"> <i class="fa fa-heart"></i> </a> </div>
                             <!-- <div class="mt-button add_to_compare"> <a [routerLink]="['/so-sanh']"> <i class="fa fa-signal"></i> </a> </div> -->
                             <div class="mt-button quick-view"> <a (click)="openModalQuickView(item)"> <i class="fa fa-search"></i> </a> </div>
                           </div>
