--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -96,3 +96,9 @@
     margin-left: 5px;
     margin-right: 5px;
 }
+
+@media screen and (max-width: 600px) {
+    .div-to-hide-mobile {
+        display: none;
+    }
+}
