--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -305,7 +305,7 @@
             </ol>
 
             <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
+            <div class="carousel-inner div-to-hide-mobile" role="listbox">
               <div class="item active"> <img src="./../assets/images/add-slide1.jpg" alt="slide1">
                 <div class="carousel-caption">
                   <h3><a [routerLink]="['/chi-tiet']" title=" Sample Product">Sale Up to 50% off</a></h3>
@@ -371,7 +371,7 @@
             </ul>
           </div>
         </div>
-        <div class="offer-banner"><img src="./../assets/images/offer-banner.jpg" alt="banner"></div>
+        <div class="offer-banner div-to-hide-mobile"><img src="./../assets/images/offer-banner.jpg" alt="banner"></div>
       </aside>
     </div>
   </div>
