--- a/src/app/quick-view/quick-view.component.html
+++ b/src/app/quick-view/quick-view.component.html
@@ -58,7 +58,7 @@
               </div>
               <div class="product-cart-option">
                 <ul>
-                  <li><a href="#"><i class="fa fa-heart"></i><span>Thêm vào yêu thích</span></a></li>
+                  <li><a  (click)="addToFavorite(product)"><i class="fa fa-heart"></i><span>Thêm vào yêu thích</span></a></li>
                   <!-- <li><a href="#"><i class="fa fa-retweet"></i><span>Add to Compare</span></a></li> -->
                 </ul>
               </div>
