--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5721,7 +5721,7 @@ ul.products-list .cart-button i {
 
 .large-image img {
 	max-width: 100%;
-	height: auto
+	height: auto;
 }
 .large-image{ border:1px #e5e5e5 solid;}
 .product-view-area .product-img-box .product-image {
